[gd_scene load_steps=26 format=2]

[ext_resource path="res://scripts/Mercenary.gd" type="Script" id=1]
[ext_resource path="res://sprites/mercenary.png" type="Texture" id=2]
[ext_resource path="res://sprites/gun.png" type="Texture" id=3]
[ext_resource path="res://wavs/shoot.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Running"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shooting"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisionCone/CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GunSprite:flip_v")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisionCone/CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GunSprite:flip_v")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Falling"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Running"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Shooting"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Standing"

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Falling/node = SubResource( 9 )
states/Falling/position = Vector2( 686, 54 )
states/Running/node = SubResource( 10 )
states/Running/position = Vector2( 306, 68 )
states/Shooting/node = SubResource( 11 )
states/Shooting/position = Vector2( 494, 62 )
states/Standing/node = SubResource( 12 )
states/Standing/position = Vector2( 70, 54 )

[sub_resource type="AnimationNodeOneShot" id=14]

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "TurnLeft"

[sub_resource type="AnimationNodeOneShot" id=16]

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "TurnRight"

[sub_resource type="AnimationNodeBlendTree" id=18]
graph_offset = Vector2( 0, 112.25 )
nodes/State/node = SubResource( 13 )
nodes/State/position = Vector2( 100, 120 )
nodes/TurnLeft/node = SubResource( 14 )
nodes/TurnLeft/position = Vector2( 340, 100 )
nodes/TurnLeftAnim/node = SubResource( 15 )
nodes/TurnLeftAnim/position = Vector2( 140, 340 )
nodes/TurnRight/node = SubResource( 16 )
nodes/TurnRight/position = Vector2( 583, 118.75 )
nodes/TurnRightAnim/node = SubResource( 17 )
nodes/TurnRightAnim/position = Vector2( 380, 340 )
nodes/output/position = Vector2( 800, 140 )
node_connections = [ "output", 0, "TurnRight", "TurnRight", 0, "TurnLeft", "TurnRight", 1, "TurnRightAnim", "TurnLeft", 0, "State", "TurnLeft", 1, "TurnLeftAnim" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 6, 9 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, -8, 128, -50, 150, 0, 128, 50, 0, 8 )

[node name="Mercenary" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Pointer" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.984314, 0.180392, 0.180392, 1 )

[node name="CliffLeftArea2D" type="Area2D" parent="."]
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CliffLeftArea2D"]
position = Vector2( -7, 11 )
shape = SubResource( 2 )

[node name="CliffRightArea2D" type="Area2D" parent="."]
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CliffRightArea2D"]
position = Vector2( 7, 11 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Falling = SubResource( 3 )
anims/Running = SubResource( 4 )
anims/Shooting = SubResource( 5 )
anims/Standing = SubResource( 6 )
anims/TurnLeft = SubResource( 7 )
anims/TurnRight = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/State/playback = SubResource( 19 )
parameters/TurnLeft/active = false
parameters/TurnRight/active = false

[node name="HitArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource( 20 )

[node name="VisionCone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionCone"]
rotation = 3.14159
shape = SubResource( 21 )

[node name="GunSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
flip_v = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true
vframes = 4
hframes = 8
frame = 24

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -10.0
